[tool.poetry]
name = "easymesh"
version = "0.1.4"
description = "Simple, fast inter-process message passing for distributed Python processes"
authors = ["Austin Bowen <austin.bowen.314@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
