[project]
name = "easymesh"
version = "0.1.11"
description = "Simple, fast inter-process message passing for distributed Python processes"
authors = [
    {name = "Austin Bowen", email = "austin.bowen.314@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"

[project.scripts]
easymesh = "easymesh.__main__:main"
meshbag = "easymesh.bag.__main__:main"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
