[project]
name = "rosy"
version = "0.4.0"
description = "Simple, fast inter-process message passing for distributed Python processes"
authors = [
    {name = "Austin Bowen", email = "austin.bowen.314@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "msgpack",
    "orjson",
    "PyYAML",
]

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"

[project.scripts]
rosy = "rosy.__main__:main"
rosybag = "rosy.bag.__main__:main"
rosylaunch = "rosy.launch.__main__:main"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
